--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
 </head>
 <body>
-    <h1>Akon o kono kaj hoyni</h1>
+  <div class="prose">
+    <input type="text">
+    <label for="">Test</label>
+  </div>
 </body>
 </html>
